--- a/LabSetup/VIRTMGR.desktop
+++ b/LabSetup/VIRTMGR.desktop
@@ -2,7 +2,7 @@
 Version=1.0
 Name=VirtEnvSetup
 Comment=Reset VM machines
-Exec=gnome-terminal -e "sudo bash /LabSetup/virtreset.sh"
+Exec=gnome-terminal -e "sudo bash /LabSetup/start.sh"
 Terminal=false
 Type=Application
 Categories=Application;
